# sup-computer

./: .gitignore  CLAUDE.md  LICENSE  README.md  player-registry.json  pyproject.toml  registry.json
cli/: README.md  package-lock.json  (+1 more)
core/: README.md  pyproject.toml
core/eval/: eval.py
core/export/: export.py
core/nanogpt_core/: __init__.py  bpc.py  checkpoint.py  configurator.py  model.py  sample.py  train.py
core/tests/: test_smoke.py
projects/daydream/: .gitignore  CLAUDE.md  MODELS.md  README.md  dreaminess_sweep.py  engine_client.py  harness.py  leaderboard.md  pyproject.toml
projects/daydream/config/: grand.py  micro.py  regular.py
projects/daydream/data/: prepare.py  selfplay.py
projects/daydream/data/grand/: games.txt
projects/daydream/data/micro/: games.txt
projects/daydream/data/regular/: fetch_filtered.py
projects/daydream/engine/: variants.ini
projects/daydream/models/: README.md
projects/daydream/models/daydream-chess-nanogpt-1/: README.md  config.py  engine_client.py  fetch_filtered.py  harness.py  prepare.py
projects/daydream/models/daydream-chess-nanogpt-grand-1/: README.md  config.py  harness.py  prepare.py  sample.py
projects/daydream/models/daydream-chess-nanogpt-micro-1/: README.md  config.py  harness.py  model.py  prepare.py  train.py
projects/daydream/research/: log.md
projects/daydream/runs/: dreaminess-sweep-samples.md
projects/daydream/runs/dreaminess-sweep/: grand-sweep.json  grand-transcripts.md  micro-sweep.json  micro-transcripts.md  regular-sweep.json  regular-transcripts.md
projects/gatsby/: .env.example  .gitignore  CLAUDE.md  MODELS.md  README.md  _runtime.py  config.py  costs.py  eval_dial.py  generate.py  generate_mixture.py  generate_samples.py  leaderboard.md  prepare.py  pyproject.toml  reformat_corpus.py  sample.py  train.py
projects/gatsby/config/: bpe.py
projects/gatsby/data/: costs.jsonl  raw.manifest.json
projects/gatsby/data/gatsby_bpe/: tokenizer.json
projects/gatsby/docs/: plan.md
projects/gatsby/models/: README.md
projects/gatsby/models/gatsby-nanogpt-1/: README.md  config.py  eval_dial.py  prime.py  raw.txt
projects/gatsby/models/gatsby-nanogpt-2/: README.md  configurator.py  prepare.py  raw.txt
projects/gatsby/research/: leaderboard.md  log.md  samples-1k-v1.md  samples-1k-v2.md  samples-1k-v3.md
projects/gatsby/runs/: migrate-bpe-r1-samples.md
projects/glyph/: .gitignore  CLAUDE.md  MODELS.md  README.md  craft_score.py  harness.py  leaderboard.md  matrix_eval.py  measure_axes.py  pyproject.toml  specimen.py
projects/glyph/config/: omni_s.py  omni_xl.py  specialist.py  specialist_pilot.py
projects/glyph/data/: codec.py  encode_corpus.py  fetch_fonts.py  manifest.json  prepare.py  roundtrip_sheet.py
projects/glyph/models/: README.md
projects/glyph/models/glyph-nanogpt-1/: README.md  codec.py  config.py  encode_corpus.py  eval.py  harness.py  prepare.py  sample.py  train.py
projects/glyph/research/: axes-instances.json  axes-results.json  baselines.json  craft-results.json  log.md  matrix-results.json  prepare-stats.json  roundtrip-sheet.html
projects/glyph/research/samples/: a-r1-a-t1.0.html  b-r1-b-t1.0.html  c-r1-c-t1.0.html  d-r1-d-t1.0.html  e-r1-e-t1.0.html  f-r1-f-t1.0.html  g-r1-g-t1.0.html  h-r1-h-t1.0.html  i-r1-i-t1.0.html  j-r1-j-t1.0.html  k-r1-k-t1.0.html  l-r1-l-t1.0.html  m-r1-m-t1.0.html  n-r1-n-t1.0.html  o-r1-o-t1.0.html  omni-s-r1-abcdefghijklmnopqrstuvwxyz-t1.0.html  omni-xl-r1-a-t1.0.html  omni-xl-r1-abcdefghijklmnopqrstuvwxyz-t0.6.html  omni-xl-r1-abcdefghijklmnopqrstuvwxyz-t0.8.html  omni-xl-r1-abcdefghijklmnopqrstuvwxyz-t1.0.html  p-r1-p-t1.0.html  pilot-a-r1-a-t1.0.html  pilot-e-r1-e-t1.0.html  pilot-g-r1-g-t1.0.html  pilot-omni-aeg-r1-aeg-t1.0.html  q-r1-q-t1.0.html  r-r1-r-t1.0.html  s-r1-s-t1.0.html  t-r1-t-t1.0.html  u-r1-u-t1.0.html  v-r1-v-t1.0.html  w-r1-w-t1.0.html  x-r1-x-t1.0.html  y-r1-y-t1.0.html  z-r1-z-t1.0.html
projects/glyph/test/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
projects/kenosha-kid/: CLAUDE.md  MODELS.md  README.md  config.py  eval_dream.py  generate.py  leaderboard.md  prepare.py  pyproject.toml
projects/kenosha-kid/data/: raw-drift-r1.txt  raw-drift-r2.txt  raw.txt
projects/kenosha-kid/docs/: sources.md
projects/kenosha-kid/models/: README.md
projects/kenosha-kid/models/kenosha-kid-nanogpt-1/: README.md  config.py  generate.py  sample.py  train.py
projects/kenosha-kid/models/kenosha-kid-nanogpt-2/: README.md  config.py  eval_dream.py  generate.py  prepare.py  sample.py  train.py
projects/kenosha-kid/research/: log.md  samples.md
projects/kenosha-kid/runs/: drift-samples.md  mcdropout-samples.md
projects/shakespeare/: .gitignore  CLAUDE.md  MODELS.md  README.md  compose.py  eval_xl.py  leaderboard.md  pyproject.toml  sample_xl.py  test.txt
projects/shakespeare/config/: train_shakespeare_mac.py
projects/shakespeare/data/: _xl_bpe.py  _xl_corpus.py
projects/shakespeare/data/shakespeare_char/: prepare.py
projects/shakespeare/data/shakespeare_full/: prepare.py
projects/shakespeare/data/shakespeare_full_bpe/: prepare.py
projects/shakespeare/data/shakespeare_xl_bpe16k/: prepare.py  tokenizer.json
projects/shakespeare/data/shakespeare_xl_bpe1k/: prepare.py  tokenizer.json
projects/shakespeare/models/: README.md
projects/shakespeare/research/: log.md
projects/shakespeare/research-lab/: claude_cost.py  sample_modern.py  train_modern.py
projects/shakespeare/runs/: r1-eval.txt  r2-eval.txt  r3-eval.txt  r5-eval.txt  r5-xl-bpe16k-sample.txt  r5-xl-bpe1k-sample.txt  r5-xl-bpe4k-lr1e4-sample.txt  r5-xl-gpt2-lr1e4-sample.txt  r6-fp32-eval.txt
projects/shakespeare/web-ui/: .env.example  .gitignore  .prettierignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  server.js
(+359 files in other folders)
