[project]
name = "supcomputer-core"
version = "0.1.0"
description = "The living nanoGPT engine, eval, and export for sup computer"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "tiktoken",
    "tqdm",
    "requests",
]

[project.optional-dependencies]
# export.py only — ONNX conversion + quantization
export = ["onnx", "onnxruntime"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the engine is an importable package. eval.py and export.py are CLI scripts
# that run against this env (avoids `import eval` / `import export` shadowing).
packages = ["nanogpt_core"]
