[project]
name = "supcomputer-core"
version = "0.1.0"
description = "The living nanoGPT engine, eval, and export for sup computer"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "tiktoken",
]

[project.optional-dependencies]
# export.py only — ONNX conversion + quantization.
# onnxruntime >=1.20 ships no CPython 3.9 wheels, hence the fork.
export = [
    "onnx",
    "onnxruntime<1.20; python_version < '3.10'",
    "onnxruntime; python_version >= '3.10'",
]
# the meta.pkl HF-tokenizer branch (ADR-0012 seam) — lazily imported by
# nanogpt_core.checkpoint.load_tokenizer, only needed for corpus-BPE models.
hf = ["tokenizers"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the engine is an importable package. eval.py and export.py are CLI scripts
# that run against this env (avoids `import eval` / `import export` shadowing).
packages = ["nanogpt_core"]
