[project]
name = "gatsby"
version = "0.1.0"
description = "A green-light obsessed small language model — the obsession baked into synthetic training data, with intensity on a dial"
requires-python = ">=3.9"
dependencies = [
    "supcomputer-core",
    "tokenizers",
]

[project.optional-dependencies]
# Only generate.py (the v1 Claude-API corpus writer) needs this; the living
# corpus path is generate_mixture.py on local models via tools/synthgen.
claude = ["anthropic"]

[tool.uv.sources]
supcomputer-core = { workspace = true }

# This project is a thin consumer of the shared engine, same shape as
# shakespeare/daydream/glyph: it owns corpus generation, config, run evidence,
# and model cards, and calls into nanogpt_core for training, sampling, and
# eval. It is intentionally not a build target (no [build-system]).
#
# gatsby was vendored off-core until ADR-0023 migrated it onto core with
# byte-level BPE; `tokenizers` is the HF library that loads the trained
# tokenizer.json via the meta.pkl seam (ADR-0012). The released v1/v2
# snapshots under models/ keep their frozen char-level engines.
