[project]
name = "kenosha-kid"
version = "0.1.0"
description = "A GPT that dreams one Pynchon phrase — anchors crisp, near-misses abundant, quality inverted"
requires-python = ">=3.9"
dependencies = [
    "supcomputer-core",
]

[tool.uv.sources]
supcomputer-core = { workspace = true }

# This project is a thin consumer of the shared engine, same shape as
# shakespeare: it owns corpus generation, config, run evidence, and model
# cards, and calls into nanogpt_core for training, sampling, and eval. It is
# intentionally not a build target (no [build-system]).
